src/objects/sma__MACustomAction__c.object
<CustomObject>
    <fields>
        <fullName>sma__ActionValue__c</fullName>
        <label>Action Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iframe</fullName>
                </value>
                <value>
                    <fullName>Javascript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Layouts__c</fullName>
        <label>Layouts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tooltip</fullName>
                </value>
                <value>
                    <fullName>Mass Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Modes__c</fullName>
        <label>Modes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Options__c</fullName>
        <defaultValue>&quot;{method:&apos;GET&apos;,addRecords:false}&quot;</defaultValue>
        <label>Options</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Requirements__c</fullName>
        <label>Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Support</fullName>
                </value>
                <value>
                    <fullName>Verified Location Support</fullName>
                </value>
                <value>
                    <fullName>Contact Or Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Standard Action</fullName>
                </value>
                <value>
                    <fullName>Custom Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MapAnything Custom Action</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>